--- a/gcal/todo.txt
+++ b/gcal/todo.txt
@@ -1,113 +1,102 @@
-2020-08-26 ElsevierJ.onlinesocialnets #deadlines due:2020-07-31
-2020-08-26 mdpi・V2Xcomm #deadlines due:2020-07-31
-2020-08-26 EAI.bodynets #deadlines due:2020-08-01
-2020-08-26 intconf.IEEE.MCNA.multimedia★jouhnalspecials #deadlines due:2020-08-01
-2020-08-26 EAI・urbiot@cyber #deadlines due:2020-08-03
-2020-08-26 EAI.wicon.wireless #deadlines due:2020-08-06
-2020-08-26 hindawi・smartphoneauth #deadlines due:2020-08-07
-2020-08-26 IEEE.MSN@東京 #deadlines due:2020-08-08
-2020-08-26 EAI・adhocnets #deadlines due:2020-08-15
-2020-08-26 EAI・mobiquitous #deadlines due:2020-08-15
-2020-08-26 GIIS.infranets★virtual #deadlines due:2020-08-15
-2020-08-26 bigdatase★virtual #deadlines due:2020-08-15
-2020-08-26 EAI.AICON.chinoAI.commnets #deadlines due:2020-08-16
-2020-08-26 smartelectronics★jornal #deadlines due:2020-08-16
-2020-08-26 tale.education.online #deadlines due:2020-08-17
-2020-08-26 inconf.ICNCC.netcomm★東京 #deadlines due:2020-08-20
-2020-08-26 IEEE・CloudNets #deadlines due:2020-08-24
-2020-08-26 classes ① johokiso (blockchain, eval), ② netchino (schedule) #current due:2020-08-26
-2020-08-26 kindle #current due:2020-08-26
-2020-08-26 purchases ① sdcards, ② 2 raspberries, ③ magnet plugs #current due:2020-08-26
-2020-08-26 wifi dongle @ home #current due:2020-08-26
-2020-08-26 JCN(korea).wireless.mimo #deadlines due:2020-08-30
-2020-08-26 岡山大学.サイバーフィジカル情報の応用研究 #jobhunt due:2020-08-31
-2020-08-26 岡山理科大(ous).情報数理.情報工学.2posts #jobhunt due:2020-08-31
-2020-08-26 工学院大学.情報学フロンティア-情報学 #jobhunt due:2020-08-31
-2020-08-26 mdpi・distwnets #deadlines due:2020-09-01
-2020-08-26 三谷産業フェア★金沢 #fundhunt due:2020-09-01
-2020-08-26 (3) docomocycle data collect #regulars due:2020-09-02
-2020-08-26 ① money (weekly) #regulars due:2020-09-02
-2020-08-26 ② jobhunt, fundhunt, cfp (weekly) #regulars due:2020-09-02
-2020-08-26 audio automation for open campus #midterm due:2020-09-05
-2020-08-26 kgu zemi faces #midterm due:2020-09-05
-2020-08-26 samsung redo cygwin #midterm due:2020-09-05
-2020-08-26 simplify yalms #midterm due:2020-09-05
-2020-08-26 tokyo hotels and schedule #midterm due:2020-09-05
-2020-08-26 video recognition engine (sotsuken) #midterm due:2020-09-05
-2020-08-26 intconf.IEEE.NCA.netapps #deadlines due:2020-09-07
-2020-08-26 明治大 #jobhunt due:2020-09-07
-2020-08-26 法政大学.情報学・計算基盤 #jobhunt due:2020-09-07
-2020-08-26 公立はこだて未来大 #jobhunt due:2020-09-10
-2020-08-26 公立はこだて未来大.情報デザイン.複雑系知能分野 #jobhunt due:2020-09-10
-2020-08-26 広島工業大学・コンピュータシステム #jobhunt due:2020-09-10
-2020-08-26 広島工業大学・情報ネットワーク #jobhunt due:2020-09-10
-2020-08-26 ACM.nanococoa.embedsensors #deadlines due:2020-09-11
-2020-08-26 北海道.情報科学研究院 #jobhunt due:2020-09-11
-2020-08-26 明治大学・統計科学・統計数学・知能情報科学 #jobhunt due:2020-09-11
-2020-08-26 本多記念賞200万・50万・30万.2items #fundhunt due:2020-09-11
-2020-08-26 法政大学.情報科学部コンピュータ科学科 #jobhunt due:2020-09-11
-2020-08-26 金沢大学.IoT及び情報通信分野 #jobhunt due:2020-09-11
-2020-08-26 国立研究開発法人理化学研究所.チームリーダー.革新知能統合研究センター #jobhunt due:2020-09-14
-2020-08-26 東京理科大工学部情報工学科インテリジェントシステム分野 #jobhunt due:2020-09-14
-2020-08-26 琉球大学.知能情報コース-知能情報講座(知能情報学-ヒューマンコンピュータ・インタラクション #jobhunt due:2020-09-14
-2020-08-26 岡山大学.ハードウェア.ソフトウェア #jobhunt due:2020-09-15
-2020-08-26 青山学院大.情報社会科学 #jobhunt due:2020-09-15
-2020-08-26 CCIoT.smartIOT #deadlines due:2020-09-18
-2020-08-26 京都先端科学大学・統計やビジネスデータの見方 #jobhunt due:2020-09-18
-2020-08-26 岡山理科大 #jobhunt due:2020-09-18
-2020-08-26 東京電機大学・情報学部門 #jobhunt due:2020-09-18
-2020-08-26 熊本学園大学.計量経済学 #jobhunt due:2020-09-18
-2020-08-26 長岡技術科学大.情報・経営システム工学専攻 #jobhunt due:2020-09-18
-2020-08-26 松本大学.データサイエンス.情報学-データサイエンス #jobhunt due:2020-09-20
-2020-08-26 岐阜聖徳学園大学・情報学 #jobhunt due:2020-09-23
-2020-08-26 adobe @ work, home #longterm due:2020-09-25
-2020-08-26 windows auth @ zaniya #longterm due:2020-09-25
-2020-08-26 岩手県立大.人工知能コース #jobhunt due:2020-09-25
-2020-08-26 成蹊大学.総合理工-計算科学-数物系科学 #jobhunt due:2020-09-25
-2020-08-26 日本大学.ソフトウェア分野-情報システム分野-データサイエンス分野-知能ロボティクス分野 #jobhunt due:2020-09-25
-2020-08-26 東京大学.高性能計算地球科学分野 #jobhunt due:2020-09-25
-2020-08-26 東京理科大.数理モデリング、知能数理分野 #jobhunt due:2020-09-25
-2020-08-26 ACMtran・IoV #deadlines due:2020-09-28
-2020-08-26 airpf人工知能研究振興財団 #fundhunt due:2020-09-30
-2020-08-26 mdpi・stenography #deadlines due:2020-09-30
-2020-08-26 公立はこだて未来大学・情報システム #jobhunt due:2020-09-30
-2020-08-26 兵庫県立大学.AI・IoT・ビックデータ #jobhunt due:2020-09-30
-2020-08-26 兵庫県立大学.情報学-情報通信-ネットワーク #jobhunt due:2020-09-30
-2020-08-26 北海道大学.数理科学・応用数学分野 #jobhunt due:2020-09-30
-2020-08-26 名城大学・情報学、統計学、フィールド調査 #jobhunt due:2020-09-30
-2020-08-26 岡山大学・電気電子機能開発 #jobhunt due:2020-09-30
-2020-08-26 成蹊大.計算科学 #jobhunt due:2020-09-30
-2020-08-26 東京都市大.情報数理 #jobhunt due:2020-09-30
-2020-08-26 東京都市大学・情報理論 #jobhunt due:2020-09-30
-2020-08-26 東京電機大 #jobhunt due:2020-09-30
-2020-08-26 株式会社メトロ.計算科学エンジニア【スーパーコンピュータ向けアプリケーション】 #jobhunt due:2020-09-30
-2020-08-26 熊本大学・ビッグデータ #jobhunt due:2020-09-30
-2020-08-26 福岡大.情報学 #jobhunt due:2020-09-30
-2020-08-26 静岡理工科大学.電子情報分野 #jobhunt due:2020-09-30
-2020-08-26 龍谷大学・情報科学分野 #jobhunt due:2020-09-30
-2020-08-26 acm・edgeAI #deadlines due:2020-10-01
-2020-08-26 mdpi・wsensornets #deadlines due:2020-10-01
-2020-08-26 明星大.データアナリティクス #jobhunt due:2020-10-02
-2020-08-26 BigDataJ.softcompute #deadlines due:2020-10-05
-2020-08-26 立命館大学.システム制御工学.無線通信・電波 #jobhunt due:2020-10-09
-2020-08-26 東京都市大学.都市デジタルシミュレーション-人間行動分析-協働まちづくりなど #jobhunt due:2020-10-12
-2020-08-26 tnsm・netmng #deadlines due:2020-10-15
-2020-08-26 FIT.制御・計測に関連する分野 #jobhunt due:2020-10-16
-2020-08-26 愛知工科大学・組込み系システム #jobhunt due:2020-10-16
-2020-08-26 東京都立大学.人とのインタラクションや感覚を対象とした情報科学的研究 #jobhunt due:2020-10-16
-2020-08-26 福岡工業大 #jobhunt due:2020-10-30
-2020-08-26 足利大学・人工知能 #jobhunt due:2020-10-30
-2020-08-26 足利大学・情報工学、情報科学センター #jobhunt due:2020-10-30
-2020-08-26 香川大学・機械システム #jobhunt due:2020-10-30
-2020-08-26 WileyJ.software.innovations #deadlines due:2020-10-31
-2020-08-26 springerj・cybersecAI #deadlines due:2020-10-31
-2020-08-26 mdpij.wirelessprotocols #deadlines due:2020-11-01
-2020-08-26 香川大学・情報システム・セキュリティコース #jobhunt due:2020-11-13
-2020-08-26 mdpi.5g #deadlines due:2020-11-20
-2020-08-26 IETj.smartcities #deadlines due:2020-12-01
-2020-08-26 IET・iot #deadlines due:2020-12-01
-2020-08-26 MDPI.geotech.spatiotemporal #deadlines due:2020-12-10
-2020-08-26 AppliedEnergyJ・P2Penergyshare #deadlines due:2020-12-20
-2020-08-26 MDPI.SloT.sensing.IoT #deadlines due:2020-12-31
-2020-08-26 MDPI.drone.swarms #deadlines due:2020-12-31
-2020-08-26 MDPI.sustain #deadlines due:2021-01-31
+2020-09-01 岡山大学.サイバーフィジカル情報の応用研究 #jobhunt due:2020-08-31
+2020-09-01 classes ① johokiso (blockchain, eval), ② netchino (schedule) #current due:2020-09-01
+2020-09-01 kindle #current due:2020-09-01
+2020-09-01 purchases ① sdcards, ② 2 raspberries, ③ magnet plugs #current due:2020-09-01
+2020-09-01 wifi dongle @ home #current due:2020-09-01
+2020-09-01 三谷産業フェア★金沢 #fundhunt due:2020-09-01
+2020-09-01 conf~j.candar(naha+virtual) #deadlines due:2020-09-06
+2020-09-01 conf.HPCS.highperf #deadlines due:2020-09-07
+2020-09-01 conf.IEEE.cloudnet #deadlines due:2020-09-07
+2020-09-01 明治大 #jobhunt due:2020-09-07
+2020-09-01 法政大学.情報学・計算基盤 #jobhunt due:2020-09-07
+2020-09-01 (3) docomocycle data collect #regulars due:2020-09-08
+2020-09-01 ① money (weekly) #regulars due:2020-09-08
+2020-09-01 ② jobhunt, fundhunt, cfp (weekly) #regulars due:2020-09-08
+2020-09-01 conf.CNSM.workshops.future.evolution.of.internet.protocols #deadlines due:2020-09-10
+2020-09-01 公立はこだて未来大 #jobhunt due:2020-09-10
+2020-09-01 公立はこだて未来大.情報デザイン.複雑系知能分野 #jobhunt due:2020-09-10
+2020-09-01 広島工業大学・コンピュータシステム #jobhunt due:2020-09-10
+2020-09-01 広島工業大学・情報ネットワーク #jobhunt due:2020-09-10
+2020-09-01 audio automation for open campus #midterm due:2020-09-11
+2020-09-01 conf.IEEE.latincom.communications #deadlines due:2020-09-11
+2020-09-01 conf.IEEEComSoc.NoF.networks.of.future #deadlines due:2020-09-11
+2020-09-01 kgu zemi faces #midterm due:2020-09-11
+2020-09-01 samsung redo cygwin #midterm due:2020-09-11
+2020-09-01 simplify yalms #midterm due:2020-09-11
+2020-09-01 tokyo hotels and schedule #midterm due:2020-09-11
+2020-09-01 video recognition engine (sotsuken) #midterm due:2020-09-11
+2020-09-01 北海道.情報科学研究院 #jobhunt due:2020-09-11
+2020-09-01 明治大学・統計科学・統計数学・知能情報科学 #jobhunt due:2020-09-11
+2020-09-01 本多記念賞200万・50万・30万.2items #fundhunt due:2020-09-11
+2020-09-01 法政大学.情報科学部コンピュータ科学科 #jobhunt due:2020-09-11
+2020-09-01 金沢大学.IoT及び情報通信分野 #jobhunt due:2020-09-11
+2020-09-01 conf.IEEE.CIC.collaboration #deadlines due:2020-09-12
+2020-09-01 conf.IEEE.CogMI.cognitive.machine.intel #deadlines due:2020-09-12
+2020-09-01 conf.IEEE.TPS.intelsystems.apps #deadlines due:2020-09-12
+2020-09-01 conf.EAI.clouds #deadlines due:2020-09-14
+2020-09-01 国立研究開発法人理化学研究所.チームリーダー.革新知能統合研究センター #jobhunt due:2020-09-14
+2020-09-01 東京理科大工学部情報工学科インテリジェントシステム分野 #jobhunt due:2020-09-14
+2020-09-01 琉球大学.知能情報コース-知能情報講座(知能情報学-ヒューマンコンピュータ・インタラクション #jobhunt due:2020-09-14
+2020-09-01 conf+j.IFIP.perfomance #deadlines due:2020-09-15
+2020-09-01 conf.3ICT #deadlines due:2020-09-15
+2020-09-01 conf.IEEE.comsnets.comm.systems.and.nets #deadlines due:2020-09-15
+2020-09-01 conf~j.EAI.HealthWear.wearables.in.healthcare #deadlines due:2020-09-15
+2020-09-01 岡山大学.ハードウェア.ソフトウェア #jobhunt due:2020-09-15
+2020-09-01 青山学院大.情報社会科学 #jobhunt due:2020-09-15
+2020-09-01 conf.ACM.SenSys.smart.iot.systems #deadlines due:2020-09-18
+2020-09-01 journal.hindawi.intelligent.techniques.for.infosecurity.in.IoT.envs #deadlines due:2020-09-18
+2020-09-01 京都先端科学大学・統計やビジネスデータの見方 #jobhunt due:2020-09-18
+2020-09-01 岡山理科大 #jobhunt due:2020-09-18
+2020-09-01 東京電機大学・情報学部門 #jobhunt due:2020-09-18
+2020-09-01 熊本学園大学.計量経済学 #jobhunt due:2020-09-18
+2020-09-01 長岡技術科学大.情報・経営システム工学専攻 #jobhunt due:2020-09-18
+2020-09-01 conf.IFIP.IM.experience.session.papers #deadlines due:2020-09-20
+2020-09-01 松本大学.データサイエンス.情報学-データサイエンス #jobhunt due:2020-09-20
+2020-09-01 岐阜聖徳学園大学・情報学 #jobhunt due:2020-09-23
+2020-09-01 conf.ACD.codeaspy.data.and.app.sec.and.privacy #deadlines due:2020-09-24
+2020-09-01 conf+j.CVNET.springer #deadlines due:2020-09-25
+2020-09-01 岩手県立大.人工知能コース #jobhunt due:2020-09-25
+2020-09-01 成蹊大学.総合理工-計算科学-数物系科学 #jobhunt due:2020-09-25
+2020-09-01 日本大学.ソフトウェア分野-情報システム分野-データサイエンス分野-知能ロボティクス分野 #jobhunt due:2020-09-25
+2020-09-01 東京大学.高性能計算地球科学分野 #jobhunt due:2020-09-25
+2020-09-01 東京理科大.数理モデリング、知能数理分野 #jobhunt due:2020-09-25
+2020-09-01 airpf人工知能研究振興財団 #fundhunt due:2020-09-30
+2020-09-01 journal.EAI.digitalSystems4Humans #deadlines due:2020-09-30
+2020-09-01 journal.IJCIS.intel.for.manage.social.nets #deadlines due:2020-09-30
+2020-09-01 公立はこだて未来大学・情報システム #jobhunt due:2020-09-30
+2020-09-01 兵庫県立大学.AI・IoT・ビックデータ #jobhunt due:2020-09-30
+2020-09-01 兵庫県立大学.情報学-情報通信-ネットワーク #jobhunt due:2020-09-30
+2020-09-01 北海道大学.数理科学・応用数学分野 #jobhunt due:2020-09-30
+2020-09-01 名城大学・情報学、統計学、フィールド調査 #jobhunt due:2020-09-30
+2020-09-01 岡山大学・電気電子機能開発 #jobhunt due:2020-09-30
+2020-09-01 成蹊大.計算科学 #jobhunt due:2020-09-30
+2020-09-01 東京都市大.情報数理 #jobhunt due:2020-09-30
+2020-09-01 東京都市大学・情報理論 #jobhunt due:2020-09-30
+2020-09-01 東京電機大 #jobhunt due:2020-09-30
+2020-09-01 株式会社メトロ.計算科学エンジニア【スーパーコンピュータ向けアプリケーション】 #jobhunt due:2020-09-30
+2020-09-01 熊本大学・ビッグデータ #jobhunt due:2020-09-30
+2020-09-01 福岡大.情報学 #jobhunt due:2020-09-30
+2020-09-01 静岡理工科大学.電子情報分野 #jobhunt due:2020-09-30
+2020-09-01 龍谷大学・情報科学分野 #jobhunt due:2020-09-30
+2020-09-01 adobe @ work, home #longterm due:2020-10-01
+2020-09-01 journal.mdpi.intel.sec.IoT #deadlines due:2020-10-01
+2020-09-01 mag.IEEEcommag.network.softwarization.and.mngmnt.(opencall) #deadlines due:2020-10-01
+2020-09-01 windows auth @ zaniya #longterm due:2020-10-01
+2020-09-01 明星大.データアナリティクス #jobhunt due:2020-10-02
+2020-09-01 立命館大学.システム制御工学.無線通信・電波 #jobhunt due:2020-10-09
+2020-09-01 conf.IEEE.MSN(tokyo).mobility.sensing.networking #deadlines due:2020-10-10
+2020-09-01 東京都市大学.都市デジタルシミュレーション-人間行動分析-協働まちづくりなど #jobhunt due:2020-10-12
+2020-09-01 journal.MDPI.ble.bluetooth.low.energy #deadlines due:2020-10-15
+2020-09-01 journal.TNSM.cybersecurity.sec.manage.nets.services #deadlines due:2020-10-15
+2020-09-01 FIT.制御・計測に関連する分野 #jobhunt due:2020-10-16
+2020-09-01 愛知工科大学・組込み系システム #jobhunt due:2020-10-16
+2020-09-01 東京都立大学.人とのインタラクションや感覚を対象とした情報科学的研究 #jobhunt due:2020-10-16
+2020-09-01 福岡工業大 #jobhunt due:2020-10-30
+2020-09-01 足利大学・人工知能 #jobhunt due:2020-10-30
+2020-09-01 足利大学・情報工学、情報科学センター #jobhunt due:2020-10-30
+2020-09-01 香川大学・機械システム #jobhunt due:2020-10-30
+2020-09-01 journal.Biosensors(JCR).machine.learning #deadlines due:2020-10-31
+2020-09-01 conf.VNC.vehicular.networking #deadlines due:2020-11-06
+2020-09-01 香川大学・情報システム・セキュリティコース #jobhunt due:2020-11-13
+2020-09-01 journal.mdpi.blockchain.for.5g.and.IoT.(opencall) #deadlines due:2020-12-00
+2020-09-01 journal.ISF.AI.for.covid #deadlines due:2021-01-15
