--- a/gcal/todo.txt
+++ b/gcal/todo.txt
@@ -1,83 +1,87 @@
-2020-09-11 三谷産業フェア★金沢 #fundhunt due:2020-09-01
-2020-09-11 ★conf.CNSM.workshops.future.evolution.of.internet.protocols #deadlines due:2020-09-10
-2020-09-11 classes ① johokiso (blockchain, eval), ② netchino (schedule) #current due:2020-09-11
-2020-09-11 conf.IEEEComSoc.NoF.networks.of.future #deadlines due:2020-09-11
-2020-09-11 kindle #current due:2020-09-11
-2020-09-11 purchases ① sdcards, ② 2 raspberries, ③ magnet plugs #current due:2020-09-11
-2020-09-11 wifi dongle @ home #current due:2020-09-11
-2020-09-11 本多記念賞200万・50万・30万.2items #fundhunt due:2020-09-11
-2020-09-11 ★conf~j.EAI.clouds #deadlines due:2020-09-14
-2020-09-11 conf~j.EAI.HealthWear.wearables.in.healthcare #deadlines due:2020-09-15
-2020-09-11 ★conf+j.IFIP.perfomance #deadlines due:2020-09-15
-2020-09-11 岡山大学.ハードウェア.ソフトウェア #jobhunt due:2020-09-15
-2020-09-11 (3) docomocycle data collect #regulars due:2020-09-18
-2020-09-11 CCIoT.smartIOT #deadlines due:2020-09-18
-2020-09-11 conf.ACM.SenSys.smart.iot.systems #deadlines due:2020-09-18
-2020-09-11 journal.hindawi.intelligent.techniques.for.infosecurity.in.IoT.envs #deadlines due:2020-09-18
-2020-09-11 ① money (weekly) #regulars due:2020-09-18
-2020-09-11 ② jobhunt, fundhunt, cfp (weekly) #regulars due:2020-09-18
-2020-09-11 ▲長岡技術科学大.情報・経営システム工学専攻 #jobhunt due:2020-09-18
-2020-09-11 京都先端科学大学・統計やビジネスデータの見方 #jobhunt due:2020-09-18
-2020-09-11 conf.IFIP.IM.experience.session.papers #deadlines due:2020-09-20
-2020-09-11 松本大学.データサイエンス.情報学-データサイエンス #jobhunt due:2020-09-20
-2020-09-11 audio automation for open campus #midterm due:2020-09-21
-2020-09-11 kgu zemi faces #midterm due:2020-09-21
-2020-09-11 samsung redo cygwin #midterm due:2020-09-21
-2020-09-11 simplify yalms #midterm due:2020-09-21
-2020-09-11 tokyo hotels and schedule #midterm due:2020-09-21
-2020-09-11 video recognition engine (sotsuken) #midterm due:2020-09-21
-2020-09-11 conf.ACD.codeaspy.data.and.app.sec.and.privacy #deadlines due:2020-09-24
-2020-09-11 conf+j.CVNET.springer #deadlines due:2020-09-25
-2020-09-11 ‼930▲成蹊大学.総合理工-計算科学-数物系科学 #jobhunt due:2020-09-25
-2020-09-11 ▲日本大学.ソフトウェア分野-情報システム分野-データサイエンス分野-知能ロボティクス分野 #jobhunt due:2020-09-25
-2020-09-11 岩手県立大.人工知能コース #jobhunt due:2020-09-25
-2020-09-11 ？★東京理科大.数理モデリング、知能数理分野 #jobhunt due:2020-09-25
-2020-09-11 ACMtran・IoV #deadlines due:2020-09-28
-2020-09-11 airpf人工知能研究振興財団 #fundhunt due:2020-09-30
-2020-09-11 journal.EAI.digitalSystems4Humans #deadlines due:2020-09-30
-2020-09-11 journal.IJCIS.intel.for.manage.social.nets #deadlines due:2020-09-30
-2020-09-11 mdpi・stenography #deadlines due:2020-09-30
-2020-09-11 ‼930▲成蹊大.計算科学 #jobhunt due:2020-09-30
-2020-09-11 ‼★公立はこだて未来大学・情報システム #jobhunt due:2020-09-30
-2020-09-11 ‼★龍谷大学・情報科学分野 #jobhunt due:2020-09-30
-2020-09-11 ▲東京都市大学・情報理論 #jobhunt due:2020-09-30
-2020-09-11 ▲静岡理工科大学.電子情報分野 #jobhunt due:2020-09-30
-2020-09-11 兵庫県立大学.情報学-情報通信-ネットワーク #jobhunt due:2020-09-30
-2020-09-11 名城大学・情報学、統計学、フィールド調査 #jobhunt due:2020-09-30
-2020-09-11 福岡大.情報学 #jobhunt due:2020-09-30
-2020-09-11 acm・edgeAI #deadlines due:2020-10-01
-2020-09-11 journal.mdpi.intel.sec.IoT #deadlines due:2020-10-01
-2020-09-11 mag.IEEEcommag.network.softwarization.and.mngmnt.(opencall) #deadlines due:2020-10-01
-2020-09-11 mdpi・wsensornets #deadlines due:2020-10-01
-2020-09-11 明星大.データアナリティクス #jobhunt due:2020-10-02
-2020-09-11 BigDataJ.softcompute #deadlines due:2020-10-05
-2020-09-11 立命館大学.システム制御工学.無線通信・電波 #jobhunt due:2020-10-09
-2020-09-11 conf.IEEE.MSN(tokyo).mobility.sensing.networking #deadlines due:2020-10-10
-2020-09-11 adobe @ work, home #longterm due:2020-10-11
-2020-09-11 windows auth @ zaniya #longterm due:2020-10-11
-2020-09-11 journal.MDPI.ble.bluetooth.low.energy #deadlines due:2020-10-15
-2020-09-11 journal.TNSM.cybersecurity.sec.manage.nets.services #deadlines due:2020-10-15
-2020-09-11 tnsm・netmng #deadlines due:2020-10-15
-2020-09-11 FIT.制御・計測に関連する分野 #jobhunt due:2020-10-16
-2020-09-11 愛知工科大学・組込み系システム #jobhunt due:2020-10-16
-2020-09-11 東京都立大学.人とのインタラクションや感覚を対象とした情報科学的研究 #jobhunt due:2020-10-16
-2020-09-11 福岡工業大 #jobhunt due:2020-10-30
-2020-09-11 足利大学・人工知能 #jobhunt due:2020-10-30
-2020-09-11 足利大学・情報工学、情報科学センター #jobhunt due:2020-10-30
-2020-09-11 香川大学・機械システム #jobhunt due:2020-10-30
-2020-09-11 WileyJ.software.innovations #deadlines due:2020-10-31
-2020-09-11 journal.Biosensors(JCR).machine.learning #deadlines due:2020-10-31
-2020-09-11 springerj・cybersecAI #deadlines due:2020-10-31
-2020-09-11 mdpij.wirelessprotocols #deadlines due:2020-11-01
-2020-09-11 conf.VNC.vehicular.networking #deadlines due:2020-11-06
-2020-09-11 香川大学・情報システム・セキュリティコース #jobhunt due:2020-11-13
-2020-09-11 mdpi.5g #deadlines due:2020-11-20
-2020-09-11 journal.mdpi.blockchain.for.5g.and.IoT.(opencall) #deadlines due:2020-12-00
-2020-09-11 IETj.smartcities #deadlines due:2020-12-01
-2020-09-11 IET・iot #deadlines due:2020-12-01
-2020-09-11 MDPI.geotech.spatiotemporal #deadlines due:2020-12-10
-2020-09-11 AppliedEnergyJ・P2Penergyshare #deadlines due:2020-12-20
-2020-09-11 MDPI.SloT.sensing.IoT #deadlines due:2020-12-31
-2020-09-11 MDPI.drone.swarms #deadlines due:2020-12-31
-2020-09-11 journal.ISF.AI.for.covid #deadlines due:2021-01-15
-2020-09-11 MDPI.sustain #deadlines due:2021-01-31
+2020-09-21 三谷産業フェア★金沢 #fundhunt due:2020-09-01
+2020-09-21 ★conf.CNSM.workshops.future.evolution.of.internet.protocols #deadlines due:2020-09-10
+2020-09-21 conf.IEEEComSoc.NoF.networks.of.future #deadlines due:2020-09-11
+2020-09-21 本多記念賞200万・50万・30万.2items #fundhunt due:2020-09-11
+2020-09-21 ★conf~j.EAI.clouds #deadlines due:2020-09-14
+2020-09-21 conf~j.EAI.HealthWear.wearables.in.healthcare #deadlines due:2020-09-15
+2020-09-21 ★conf+j.IFIP.perfomance #deadlines due:2020-09-15
+2020-09-21 CCIoT.smartIOT #deadlines due:2020-09-18
+2020-09-21 conf.ACM.SenSys.smart.iot.systems #deadlines due:2020-09-18
+2020-09-21 journal.hindawi.intelligent.techniques.for.infosecurity.in.IoT.envs #deadlines due:2020-09-18
+2020-09-21 conf.IFIP.IM.experience.session.papers #deadlines due:2020-09-20
+2020-09-21 classes ① johokiso (blockchain, eval), ② netchino (schedule) #current due:2020-09-21
+2020-09-21 kindle #current due:2020-09-21
+2020-09-21 purchases ① sdcards, ② 2 raspberries, ③ magnet plugs #current due:2020-09-21
+2020-09-21 wifi dongle @ home #current due:2020-09-21
+2020-09-21 conf.ACD.codeaspy.data.and.app.sec.and.privacy #deadlines due:2020-09-24
+2020-09-21 conf+j.CVNET.springer #deadlines due:2020-09-25
+2020-09-21 (3) docomocycle data collect #regulars due:2020-09-28
+2020-09-21 ACMtran・IoV #deadlines due:2020-09-28
+2020-09-21 ① money (weekly) #regulars due:2020-09-28
+2020-09-21 ② jobhunt, fundhunt, cfp (weekly) #regulars due:2020-09-28
+2020-09-21 岡山大学・知能機械システム学講座 #jobhunt due:2020-09-28
+2020-09-21 airpf人工知能研究振興財団 #fundhunt due:2020-09-30
+2020-09-21 journal.EAI.digitalSystems4Humans #deadlines due:2020-09-30
+2020-09-21 journal.IJCIS.intel.for.manage.social.nets #deadlines due:2020-09-30
+2020-09-21 mdpi・stenography #deadlines due:2020-09-30
+2020-09-21 ‼★公立はこだて未来大学・情報システム #jobhunt due:2020-09-30
+2020-09-21 ▲東京都市大学・情報理論 #jobhunt due:2020-09-30
+2020-09-21 ▲静岡理工科大学.電子情報分野 #jobhunt due:2020-09-30
+2020-09-21 ★龍谷大学・情報科学分野 #jobhunt due:2020-09-30
+2020-09-21 兵庫県立大学.情報学-情報通信-ネットワーク #jobhunt due:2020-09-30
+2020-09-21 兵庫県立大学・情報通信工学 #jobhunt due:2020-09-30
+2020-09-21 名城大学・情報学、統計学、フィールド調査 #jobhunt due:2020-09-30
+2020-09-21 福岡大.情報学 #jobhunt due:2020-09-30
+2020-09-21 acm・edgeAI #deadlines due:2020-10-01
+2020-09-21 audio automation for open campus #midterm due:2020-10-01
+2020-09-21 journal.mdpi.intel.sec.IoT #deadlines due:2020-10-01
+2020-09-21 kgu zemi faces #midterm due:2020-10-01
+2020-09-21 mag.IEEEcommag.network.softwarization.and.mngmnt.(opencall) #deadlines due:2020-10-01
+2020-09-21 mdpi・wsensornets #deadlines due:2020-10-01
+2020-09-21 samsung redo cygwin #midterm due:2020-10-01
+2020-09-21 simplify yalms #midterm due:2020-10-01
+2020-09-21 tokyo hotels and schedule #midterm due:2020-10-01
+2020-09-21 video recognition engine (sotsuken) #midterm due:2020-10-01
+2020-09-21 明星大.データアナリティクス #jobhunt due:2020-10-02
+2020-09-21 BigDataJ.softcompute #deadlines due:2020-10-05
+2020-09-21 立命館大学.システム制御工学.無線通信・電波 #jobhunt due:2020-10-09
+2020-09-21 conf.IEEE.MSN(tokyo).mobility.sensing.networking #deadlines due:2020-10-10
+2020-09-21 journal.MDPI.ble.bluetooth.low.energy #deadlines due:2020-10-15
+2020-09-21 journal.TNSM.cybersecurity.sec.manage.nets.services #deadlines due:2020-10-15
+2020-09-21 tnsm・netmng #deadlines due:2020-10-15
+2020-09-21 FIT.制御・計測に関連する分野 #jobhunt due:2020-10-16
+2020-09-21 千葉経済大学・情報学分野 #jobhunt due:2020-10-16
+2020-09-21 大阪大学大学院・情報科学研究科 #jobhunt due:2020-10-16
+2020-09-21 愛知工科大学・データサイエンスまたはＡＩ #jobhunt due:2020-10-16
+2020-09-21 東京都立大学.人とのインタラクションや感覚を対象とした情報科学的研究 #jobhunt due:2020-10-16
+2020-09-21 adobe @ work, home #longterm due:2020-10-21
+2020-09-21 windows auth @ zaniya #longterm due:2020-10-21
+2020-09-21 東京工業大学・情報通信における応用AI分野 #jobhunt due:2020-10-23
+2020-09-21 福岡工業大 #jobhunt due:2020-10-30
+2020-09-21 足利大学・人工知能 #jobhunt due:2020-10-30
+2020-09-21 足利大学・情報工学、情報科学センター #jobhunt due:2020-10-30
+2020-09-21 香川大学・機械システム #jobhunt due:2020-10-30
+2020-09-21 高知大学・情報工学 #jobhunt due:2020-10-30
+2020-09-21 WileyJ.software.innovations #deadlines due:2020-10-31
+2020-09-21 journal.Biosensors(JCR).machine.learning #deadlines due:2020-10-31
+2020-09-21 springerj・cybersecAI #deadlines due:2020-10-31
+2020-09-21 mdpij.wirelessprotocols #deadlines due:2020-11-01
+2020-09-21 IoT・AIロボティクス・メカトロニクス・知能機械 #jobhunt due:2020-11-04
+2020-09-21 お茶の水女子大学・人間工学（ロボット工学、生体工学） #jobhunt due:2020-11-04
+2020-09-21 名古屋市立大学・情報環境デザイン領域 #jobhunt due:2020-11-05
+2020-09-21 conf.VNC.vehicular.networking #deadlines due:2020-11-06
+2020-09-21 情報システム工学科 #jobhunt due:2020-11-10
+2020-09-21 香川大学・情報システム・セキュリティコース #jobhunt due:2020-11-13
+2020-09-21 mdpi.5g #deadlines due:2020-11-20
+2020-09-21 信州大学.通信システム分野 #jobhunt due:2020-11-30
+2020-09-21 岡山理科大学・データサイエンス #jobhunt due:2020-11-30
+2020-09-21 journal.mdpi.blockchain.for.5g.and.IoT.(opencall) #deadlines due:2020-12-00
+2020-09-21 IETj.smartcities #deadlines due:2020-12-01
+2020-09-21 IET・iot #deadlines due:2020-12-01
+2020-09-21 MDPI.geotech.spatiotemporal #deadlines due:2020-12-10
+2020-09-21 東京通信大学・情報システム分野 #jobhunt due:2020-12-14
+2020-09-21 AppliedEnergyJ・P2Penergyshare #deadlines due:2020-12-20
+2020-09-21 MDPI.SloT.sensing.IoT #deadlines due:2020-12-31
+2020-09-21 MDPI.drone.swarms #deadlines due:2020-12-31
+2020-09-21 journal.ISF.AI.for.covid #deadlines due:2021-01-15
+2020-09-21 MDPI.sustain #deadlines due:2021-01-31
