--- a/gcal/todo.txt
+++ b/gcal/todo.txt
@@ -1,79 +1,92 @@
-2020-10-02 三谷産業フェア★金沢 #fundhunt due:2020-09-01
-2020-10-02 本多記念賞200万・50万・30万.2items #fundhunt due:2020-09-11
-2020-10-02 airpf人工知能研究振興財団 #fundhunt due:2020-09-30
-2020-10-02 兵庫県立大学.情報学-情報通信-ネットワーク #jobhunt due:2020-09-30
-2020-10-02 classes ① johokiso (blockchain, eval), ② netchino (schedule) #current due:2020-10-02
-2020-10-02 kindle #current due:2020-10-02
-2020-10-02 purchases ① sdcards, ② 2 raspberries, ③ magnet plugs #current due:2020-10-02
-2020-10-02 wifi dongle @ home #current due:2020-10-02
-2020-10-02 IEEE.CogMI #deadlines due:2020-10-04
-2020-10-02 BigDataJ.softcompute #deadlines due:2020-10-05
-2020-10-02 EAI #deadlines due:2020-10-05
-2020-10-02 ICIN.clouds.paris(online) #deadlines due:2020-10-08
-2020-10-02 (3) docomocycle data collect #regulars due:2020-10-09
-2020-10-02 ① money (weekly) #regulars due:2020-10-09
-2020-10-02 ② jobhunt, fundhunt, cfp (weekly) #regulars due:2020-10-09
-2020-10-02 conf.IEEE.MSN(tokyo).mobility.sensing.networking #deadlines due:2020-10-10
-2020-10-02 IEEE.ICC.SQRM.qosqoemodeling #deadlines due:2020-10-12
-2020-10-02 IEEE.ICC.netgennets #deadlines due:2020-10-12
-2020-10-02 audio automation for open campus #midterm due:2020-10-12
-2020-10-02 kgu zemi faces #midterm due:2020-10-12
-2020-10-02 samsung redo cygwin #midterm due:2020-10-12
-2020-10-02 simplify yalms #midterm due:2020-10-12
-2020-10-02 tokyo hotels and schedule #midterm due:2020-10-12
-2020-10-02 video recognition engine (sotsuken) #midterm due:2020-10-12
-2020-10-02 (J)Sensors.cooperativePerceptionVehicles #deadlines due:2020-10-15
-2020-10-02 EAI.vnets(springerlink) #deadlines due:2020-10-15
-2020-10-02 SoCPaR(springer)(online) #deadlines due:2020-10-15
-2020-10-02 journal.TNSM.cybersecurity.sec.manage.nets.services #deadlines due:2020-10-15
-2020-10-02 IEEE.CCNC.RoboCom.swarms #deadlines due:2020-10-16
-2020-10-02 千葉経済大学・情報学分野 #jobhunt due:2020-10-16
-2020-10-02 大阪大学大学院・情報科学研究科 #jobhunt due:2020-10-16
-2020-10-02 愛知工科大学・データサイエンスまたはＡＩ #jobhunt due:2020-10-16
-2020-10-02 東京都立大学.人とのインタラクションや感覚を対象とした情報科学的研究 #jobhunt due:2020-10-16
-2020-10-02 EAI.MTYMEX.SmartTech(springer) #deadlines due:2020-10-19
-2020-10-02 PAM #deadlines due:2020-10-23
-2020-10-02 東京工業大学・情報通信における応用AI分野 #jobhunt due:2020-10-23
-2020-10-02 DASFAA.databases(springer) #deadlines due:2020-10-28
-2020-10-02 (J)ACMTrans.ContactTracing #deadlines due:2020-10-30
-2020-10-02 âEAI.Covid19.and.cloud(+J) #deadlines due:2020-10-30
-2020-10-02 福岡工業大 #jobhunt due:2020-10-30
-2020-10-02 足利大学・人工知能 #jobhunt due:2020-10-30
-2020-10-02 足利大学・情報工学、情報科学センター #jobhunt due:2020-10-30
-2020-10-02 香川大学・機械システム #jobhunt due:2020-10-30
-2020-10-02 高知大学・情報工学 #jobhunt due:2020-10-30
-2020-10-02 WileyJ.software.innovations #deadlines due:2020-10-31
-2020-10-02 journal.Biosensors(JCR).machine.learning #deadlines due:2020-10-31
-2020-10-02 springerj・cybersecAI #deadlines due:2020-10-31
-2020-10-02 (J)IEEETrans.designManageReliableCommNets #deadlines due:2020-11-01
-2020-10-02 CloudConf.SmartCom(virtual) #deadlines due:2020-11-01
-2020-10-02 adobe @ work, home #longterm due:2020-11-01
-2020-10-02 mdpij.wirelessprotocols #deadlines due:2020-11-01
-2020-10-02 windows auth @ zaniya #longterm due:2020-11-01
-2020-10-02 お茶の水女子大学・人間工学（ロボット工学、生体工学） #jobhunt due:2020-11-04
-2020-10-02 久留米工業大学・IoT・AIロボティクス・メカトロニクス・知能機械 #jobhunt due:2020-11-04
-2020-10-02 名古屋市立大学・情報環境デザイン領域 #jobhunt due:2020-11-05
-2020-10-02 conf.VNC.vehicular.networking #deadlines due:2020-11-06
-2020-10-02 情報システム工学科 #jobhunt due:2020-11-10
-2020-10-02 香川大学・情報システム・セキュリティコース #jobhunt due:2020-11-13
-2020-10-02 (J)IEEE.VTechMag.earial.mobility #deadlines due:2020-11-15
-2020-10-02 mdpi.5g #deadlines due:2020-11-20
-2020-10-02 (J)TailorFrancis.SmartCities #deadlines due:2020-11-30
-2020-10-02 信州大学.通信システム分野 #jobhunt due:2020-11-30
-2020-10-02 岡山理科大学・データサイエンス #jobhunt due:2020-11-30
-2020-10-02 journal.mdpi.blockchain.for.5g.and.IoT.(opencall) #deadlines due:2020-12-00
-2020-10-02 IETj.smartcities #deadlines due:2020-12-01
-2020-10-02 MDPI.geotech.spatiotemporal #deadlines due:2020-12-10
-2020-10-02 東京通信大学・情報システム分野 #jobhunt due:2020-12-14
-2020-10-02 (J)MDPI.Drones.swarms #deadlines due:2020-12-31
-2020-10-02 (J)MDPI.WirelessSensors.ITS #deadlines due:2020-12-31
-2020-10-02 (J)mdpi.Sensing.and.IoT #deadlines due:2020-12-31
-2020-10-02 MDPI.drone.swarms #deadlines due:2020-12-31
-2020-10-02 (J)ComMag.Network4Covid #deadlines due:2021-01-01
-2020-10-02 IFIP.Networking(~J) #deadlines due:2021-01-05
-2020-10-02 jour.ICTexpress.edge #deadlines due:2021-01-10
-2020-10-02 J.Elsevier.compintelligence #deadlines due:2021-01-15
-2020-10-02 journal.ISF.AI.for.covid #deadlines due:2021-01-15
-2020-10-02 MDPI.sustain #deadlines due:2021-01-31
-2020-10-02 jour.mdpi.vehicularfleets #deadlines due:2021-02-28
-2020-10-02 KSEM.knowledge #deadlines due:2021-03-15
+2020-10-12 三谷産業フェア★金沢 #fundhunt due:2020-09-01
+2020-10-12 本多記念賞200万・50万・30万.2items #fundhunt due:2020-09-11
+2020-10-12 airpf人工知能研究振興財団 #fundhunt due:2020-09-30
+2020-10-12 兵庫県立大学.情報学-情報通信-ネットワーク #jobhunt due:2020-09-30
+2020-10-12 EAI #deadlines due:2020-10-05
+2020-10-12 ICIN.clouds.paris(online) #deadlines due:2020-10-08
+2020-10-12 conf.IEEE.MSN(tokyo).mobility.sensing.networking #deadlines due:2020-10-10
+2020-10-12 IEEE.ICC.SQRM.qosqoemodeling #deadlines due:2020-10-12
+2020-10-12 IEEE.ICC.netgennets #deadlines due:2020-10-12
+2020-10-12 classes ① johokiso (blockchain, eval), ② netchino (schedule) #current due:2020-10-12
+2020-10-12 kindle #current due:2020-10-12
+2020-10-12 purchases ① sdcards, ② 2 raspberries, ③ magnet plugs #current due:2020-10-12
+2020-10-12 wifi dongle @ home #current due:2020-10-12
+2020-10-12 (J)Sensors.cooperativePerceptionVehicles #deadlines due:2020-10-15
+2020-10-12 EAI.vnets(springerlink) #deadlines due:2020-10-15
+2020-10-12 SoCPaR(springer)(online) #deadlines due:2020-10-15
+2020-10-12 journal.TNSM.cybersecurity.sec.manage.nets.services #deadlines due:2020-10-15
+2020-10-12 IEEE.CCNC.RoboCom.swarms #deadlines due:2020-10-16
+2020-10-12 千葉経済大学・情報学分野 #jobhunt due:2020-10-16
+2020-10-12 大阪大学大学院・情報科学研究科 #jobhunt due:2020-10-16
+2020-10-12 愛知工科大学・データサイエンスまたはＡＩ #jobhunt due:2020-10-16
+2020-10-12 東京都立大学.人とのインタラクションや感覚を対象とした情報科学的研究 #jobhunt due:2020-10-16
+2020-10-12 石川県工業試験場・電気職 #jobhunt due:2020-10-16
+2020-10-12 (3) docomocycle data collect #regulars due:2020-10-19
+2020-10-12 EAI.MTYMEX.SmartTech(springer) #deadlines due:2020-10-19
+2020-10-12 ① money (weekly) #regulars due:2020-10-19
+2020-10-12 ② jobhunt, fundhunt, cfp (weekly) #regulars due:2020-10-19
+2020-10-12 玉川大学・ソフトウェアサイエンス学科 #jobhunt due:2020-10-19
+2020-10-12 audio automation for open campus #midterm due:2020-10-22
+2020-10-12 kgu zemi faces #midterm due:2020-10-22
+2020-10-12 samsung redo cygwin #midterm due:2020-10-22
+2020-10-12 simplify yalms #midterm due:2020-10-22
+2020-10-12 tokyo hotels and schedule #midterm due:2020-10-22
+2020-10-12 video recognition engine (sotsuken) #midterm due:2020-10-22
+2020-10-12 PAM #deadlines due:2020-10-23
+2020-10-12 東京工業大学・情報通信における応用AI分野 #jobhunt due:2020-10-23
+2020-10-12 DASFAA.databases(springer) #deadlines due:2020-10-28
+2020-10-12 成城大学・経営統計学 #jobhunt due:2020-10-29
+2020-10-12 (J)ACMTrans.ContactTracing #deadlines due:2020-10-30
+2020-10-12 ★EAI.Covid19.and.cloud(+J) #deadlines due:2020-10-30
+2020-10-12 公立小松大学・データマイニング・機械学習・データ科学関連分野 #jobhunt due:2020-10-30
+2020-10-12 福岡工業大 #jobhunt due:2020-10-30
+2020-10-12 茨城キリスト教大学・経営情報分野 #jobhunt due:2020-10-30
+2020-10-12 足利大学・人工知能 #jobhunt due:2020-10-30
+2020-10-12 足利大学・情報工学、情報科学センター #jobhunt due:2020-10-30
+2020-10-12 香川大学・機械システム #jobhunt due:2020-10-30
+2020-10-12 高知大学・情報工学 #jobhunt due:2020-10-30
+2020-10-12 WileyJ.software.innovations #deadlines due:2020-10-31
+2020-10-12 journal.Biosensors(JCR).machine.learning #deadlines due:2020-10-31
+2020-10-12 springerj・cybersecAI #deadlines due:2020-10-31
+2020-10-12 (J)IEEETrans.designManageReliableCommNets #deadlines due:2020-11-01
+2020-10-12 CloudConf.SmartCom(virtual) #deadlines due:2020-11-01
+2020-10-12 mdpij.wirelessprotocols #deadlines due:2020-11-01
+2020-10-12 お茶の水女子大学・人間工学（ロボット工学、生体工学） #jobhunt due:2020-11-04
+2020-10-12 久留米工業大学・IoT・AIロボティクス・メカトロニクス・知能機械 #jobhunt due:2020-11-04
+2020-10-12 名古屋市立大学・情報環境デザイン領域 #jobhunt due:2020-11-05
+2020-10-12 conf.VNC.vehicular.networking #deadlines due:2020-11-06
+2020-10-12 近畿大学・情報セキュリティ教育 #jobhunt due:2020-11-06
+2020-10-12 情報システム工学科 #jobhunt due:2020-11-10
+2020-10-12 adobe @ work, home #longterm due:2020-11-11
+2020-10-12 windows auth @ zaniya #longterm due:2020-11-11
+2020-10-12 香川大学・情報システム・セキュリティコース #jobhunt due:2020-11-13
+2020-10-12 (J)IEEE.VTechMag.earial.mobility #deadlines due:2020-11-15
+2020-10-12 mdpi.5g #deadlines due:2020-11-20
+2020-10-12 岡山理科大学・計算機工学・コンピュータシステム分野 #jobhunt due:2020-11-20
+2020-10-12 香川大学・情報通信コース #jobhunt due:2020-11-20
+2020-10-12 (J)TailorFrancis.SmartCities #deadlines due:2020-11-30
+2020-10-12 信州大学.通信システム分野 #jobhunt due:2020-11-30
+2020-10-12 岐阜大学・数理・データサイエンス #jobhunt due:2020-11-30
+2020-10-12 岡山理科大学・データサイエンス #jobhunt due:2020-11-30
+2020-10-12 情報・経営システム工学 #jobhunt due:2020-11-30
+2020-10-12 金沢大学・先端科学・社会共創推進機構 #jobhunt due:2020-11-30
+2020-10-12 金沢大学・先端科学・社会共創推進機構・人材育成グループ #jobhunt due:2020-11-30
+2020-10-12 長岡技術科学大学・情報・経営システム工学 #jobhunt due:2020-11-30
+2020-10-12 journal.mdpi.blockchain.for.5g.and.IoT.(opencall) #deadlines due:2020-12-00
+2020-10-12 IETj.smartcities #deadlines due:2020-12-01
+2020-10-12 東京工業大学・ソフトウェア工学分野 #jobhunt due:2020-12-01
+2020-10-12 東京電機大学・情報システムデザイン #jobhunt due:2020-12-05
+2020-10-12 MDPI.geotech.spatiotemporal #deadlines due:2020-12-10
+2020-10-12 東京通信大学・情報システム分野 #jobhunt due:2020-12-14
+2020-10-12 (J)MDPI.Drones.swarms #deadlines due:2020-12-31
+2020-10-12 (J)MDPI.WirelessSensors.ITS #deadlines due:2020-12-31
+2020-10-12 (J)mdpi.Sensing.and.IoT #deadlines due:2020-12-31
+2020-10-12 MDPI.drone.swarms #deadlines due:2020-12-31
+2020-10-12 (J)ComMag.Network4Covid #deadlines due:2021-01-01
+2020-10-12 IFIP.Networking(~J) #deadlines due:2021-01-05
+2020-10-12 jour.ICTexpress.edge #deadlines due:2021-01-10
+2020-10-12 J.Elsevier.compintelligence #deadlines due:2021-01-15
+2020-10-12 journal.ISF.AI.for.covid #deadlines due:2021-01-15
+2020-10-12 MDPI.sustain #deadlines due:2021-01-31
+2020-10-12 jour.mdpi.vehicularfleets #deadlines due:2021-02-28
+2020-10-12 KSEM.knowledge #deadlines due:2021-03-15
